Fixing Overflow in Color Interpolation Text and Range Limits on Color Interpolation

--- a/css/color-interpolation.css
+++ b/css/color-interpolation.css
@@ -96,6 +96,7 @@
 	border-radius: 8px;
 	border: solid grey 2px;
 	margin-bottom: 1em;
+	overflow: hidden;
 }
 
 #text-background-contrast .color-interpolation-square {
